简单折腾了下评分,下次需要去除多余的垃圾代码,太晚了

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
           console.log(data); //id
           //TODO 逻辑
           localStorage.setItem("userId", data.id);
+          localStorage.setItem("username", Username);
           window.location.href = "./map";
         });
     }
