--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     });
     document.getElementById("login").addEventListener("click", login);
     document.getElementById("create").addEventListener("click", register);
-    function login() {
+    function login(event) {
+      event.preventDefault(); // 阻止跳转
       const UsernameInput = document.getElementById("login-username");
       const passwordInput = document.getElementById("login-password");
       let Username = UsernameInput.value;
@@ -50,7 +51,7 @@
       })
         .then((response) => {
           if (!response.ok) {
-            throw new Error("账号密码错误");
+            alert("账号密码错误");
           } else {
             return response.json();
           }
@@ -63,7 +64,8 @@
           window.location.href = "./map";
         });
     }
-    function register() {
+    function register(event) {
+      event.preventDefault(); // 阻止跳转
       const UsernameInput = document.getElementById("create-name");
       const passwordInput = document.getElementById("create-password");
       let Username = UsernameInput.value;
